Checkpoint: Began implementation of concrete Kafka to S3 Connector. This serves as a de-facto example for how to create Connectors and exercises the different APIs and methods to ensure that they are well designed.